cmake_minimum_required(VERSION 3.21)
project(Projekt1)

set(CMAKE_CXX_STANDARD 14)

add_executable(Projekt1 main.cpp Swiat.cpp Swiat.h Organizm.cpp Organizm.h Zwierze.cpp Zwierze.h Roslina.cpp Roslina.h ListaOrganizmow.cpp ListaOrganizmow.h Wilk.cpp Wilk.h Mapa.cpp Mapa.h Owca.cpp Owca.h Wspolrzedne.cpp Wspolrzedne.h Trawa.cpp Trawa.h Mlecz.cpp Mlecz.h Guarana.cpp Guarana.h Wilcza_Jagoda.cpp Wilcza_Jagoda.h Barszcz_Sosnowskiego.cpp Barszcz_Sosnowskiego.h Zolw.cpp Zolw.h Antylopa.cpp Antylopa.h Lis.cpp Lis.h Czlowiek.cpp Czlowiek.h)
